--- a/volunteer-app/e2e/tsconfig.json
+++ b/volunteer-app/e2e/tsconfig.json
@@ -5,9 +5,7 @@
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
     "target": "es2018",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "types": ["chai", "cucumber", "node"],
+    
   }
 }
